tests/PhiCore/compile_failure/src/Core/NotNullFlatPtr.default.fail.cpp
#include <Phi/Core/FlatPtr.hpp>

int main()
{
    phi::NotNullFlatPtr ptr;
}
